--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ title: 'Tatsuta Recipes'
 
 
 # The full URL to your site. Note: site.github.url will be used by default.
-url:
+url: https://tatsutascott.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "recipes"
+baseurl: "/recipes"
 
 # global author information
 author: Scott Tatsuta
