--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ url: https://tatsutascott.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/recipes"
+
+baseurl: ""
 
 # global author information
 author: Scott Tatsuta
