--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url: https://tatsutascott.github.io
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 
-baseurl: ""
+baseurl: "/recipes"
 
 # global author information
 author: Scott Tatsuta
