--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: 'Tatsuta Recipes'
 
 
 # The full URL to your site. Note: site.github.url will be used by default.
-url: https://tatsutascott.github.io
+url: "https://tatsutascott.github.io"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -18,7 +18,7 @@ url: https://tatsutascott.github.io
 # then add in the baseurl here, like this: "/repository-name"
 
 baseurl: "/recipes"
-
+permalink: /:title
 # global author information
 author: Scott Tatsuta
 
